# bayes_optimization_sample

./: .gitignore  README.md  docker-compose.yml
code/backend/: pyproject.toml
code/backend/src/: .env.sample  app.py  db.py  migration_db.py  sample.py
code/backend/src/analysis/: material.py
code/backend/src/crud/: material.py
code/backend/src/data/: combinations.csv
code/backend/src/models/: material.py
code/backend/src/routes/: predict.py
code/frontend/src/: App.tsx
code/frontend/src/components/: InitExperiment.tsx  PredictPage.tsx
code/frontend/src/hooks/: useDeleteExperiment.ts  usePredictMaterial.ts
code/frontend/src/types/: material.ts
docker/backend/: Dockerfile
